fix stream api